"Header" Was Created And Styled And "SPA" Logic Was Applied To This Component

--- a/src/Constant.css
+++ b/src/Constant.css
@@ -1,4 +1,6 @@
 :root {
     --primaryWhite: #ffffff;
     --primaryBlack: #000000;
+    --primaryGreen: #80ad01;
+    --primaryGrayLight: #6b6b6b;
 }
