--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url("./Constant.css");
+
 @font-face {
     font-family: "IranianSans";
     src: url("./../public/Fonts/IranianSans.woff") format("woff"),
@@ -16,4 +18,18 @@
 
 body {
     font-family: "IranianSans";
+    background-color: var(--primaryWhite);
+    font-size: 16px;
+}
+
+a {
+    text-decoration: none;
+}
+li {
+    list-style-type: none;
+}
+
+.active {
+    color: var(--primaryGreen) !important;
+    font-weight: bold;
 }
