The Logic And Styling Of The Filter Buttons Was Done In "FilterBox.jsx".

--- a/src/Constant.css
+++ b/src/Constant.css
@@ -2,5 +2,7 @@
     --primaryWhite: #ffffff;
     --primaryBlack: #000000;
     --primaryGreen: #80ad01;
-    --primaryGrayLight: #6b6b6b;
+    --primaryGrayLight: #eff2e6;
+    --primaryGrayLightBackGroundBtn: #d9ddcb;
+    --primaryGrayMedium: #6b6b6b;
 }
