The "Card.jsx" Was Styled

--- a/src/Constant.css
+++ b/src/Constant.css
@@ -4,5 +4,8 @@
     --primaryGreen: #80ad01;
     --primaryGrayLight: #eff2e6;
     --primaryGrayLightBackGroundBtn: #d9ddcb;
+    --primaryGray: #878787;
+    --primaryGrayPrice: #c4c6c2;
     --primaryGrayMedium: #6b6b6b;
+    --primaryGrayDark: #383838;
 }
