--- a/src/Pages/Home/Home.module.css
+++ b/src/Pages/Home/Home.module.css
@@ -42,3 +42,8 @@
     align-items: center;
     justify-content: space-between;
 }
+
+.container_cards {
+    width: 100%;
+    margin-top: 128px;
+}
