--- a/src/Components/Card/Card.module.css
+++ b/src/Components/Card/Card.module.css
@@ -114,7 +114,7 @@
     line-height: 14px;
     text-align: right;
 }
-.container_price_increase > button {
+.btn_plus {
     background-color: var(--primaryWhite);
     outline: none;
     width: 35px;
@@ -131,11 +131,32 @@
     width: 14px;
     height: 14px;
 }
-.container_price_increase > button:hover {
+.btn_plus:hover {
     background-color: var(--primaryGreen);
 }
-.container_price_increase > button:hover > svg path {
+.btn_plus:hover > svg path {
     stroke: var(--primaryWhite);
+}
+
+.numberHandler {
+    width: 70px;
+    height: 35px;
+    background: var(--primaryWhite);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    border: 1px solid var(--primaryGreen);
+    outline: none;
+    border-radius: 4px;
+    transition: all ease-in 150ms;
+    padding: 0px 4px;
+}
+
+.numberHandler > p {
+    font-size: 14px;
+    line-height: 24px;
+    color: var(--primaryGreen);
 }
 
 .final_price {
