The sliders were saved in the database

--- a/src/Constant.css
+++ b/src/Constant.css
@@ -8,4 +8,5 @@
     --primaryGrayPrice: #c4c6c2;
     --primaryGrayMedium: #6b6b6b;
     --primaryGrayDark: #383838;
+    --primaryGrayDarkBold: #626754;
 }
