--- a/src/LayOut/Header.module.css
+++ b/src/LayOut/Header.module.css
@@ -1,52 +1,82 @@
 @import url("./../Constant.css");
 
-header {
-    max-width: 1440px;
-    height: 73px;
-    margin: 0px auto;
-    padding: 0px 34px;
-    border-bottom: 1px solid #ebebeb;
-    display: flex;
-    justify-content: space-between;
-    flex-direction: row-reverse;
-    align-items: center;
+@media screen and (min-width: 393px) {
+    .headerPC {
+        display: none;
+    }
+    .headerMobile {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        max-width: 393px;
+        height: 66px;
+        margin: 0px auto;
+    }
+    .headerMobile > span {
+        display: flex;
+        width: 96px;
+        height: 48px;
+        margin-right: 8px;
+    }
+    .headerMobile > img {
+        width: 96px;
+        height: 45.78px;
+        margin-left: 14px;
+    }
 }
 
-.icons {
-    width: 134px;
-    height: 38px;
-    display: flex;
-    flex-direction: row-reverse;
-    gap: 10px;
-    align-items: center;
-}
+@media screen and (min-width: 1000px) {
+    .headerMobile {
+        display: none;
+    }
+    .headerPC {
+        max-width: 1440px;
+        height: 73px;
+        margin: 0px auto;
+        padding: 0px 34px;
+        border-bottom: 1px solid #ebebeb;
+        display: flex;
+        justify-content: space-between;
+        flex-direction: row-reverse;
+        align-items: center;
+    }
 
-.image_icon {
-    width: 38px;
-    height: 38px;
-}
+    .icons {
+        width: 134px;
+        height: 38px;
+        display: flex;
+        flex-direction: row-reverse;
+        gap: 10px;
+        align-items: center;
+    }
 
-.image_icon > img {
-    width: 100%;
-    height: 100%;
-}
+    .image_icon {
+        width: 38px;
+        height: 38px;
+    }
 
-.container_li {
-    width: 396px;
-    height: 38px;
-    display: flex;
-    flex-direction: row;
-    gap: 39px;
-    align-items: center;
-}
+    .image_icon > img {
+        width: 100%;
+        height: 100%;
+    }
 
-.container_li > li > a {
-    font-size: 14px;
-    line-height: 21.91px;
-    color: var(--primaryGrayMedium);
-}
+    .container_li {
+        width: 396px;
+        height: 38px;
+        display: flex;
+        flex-direction: row;
+        gap: 39px;
+        align-items: center;
+    }
 
-.logo {
-    width: 105.76px;
-    height: 50.36px;
+    .container_li > li > a {
+        font-size: 14px;
+        line-height: 21.91px;
+        color: var(--primaryGrayMedium);
+    }
+
+    .logo {
+        width: 105.76px;
+        height: 50.36px;
+    }
 }
