--- a/src/Components/Card/Card.module.css
+++ b/src/Components/Card/Card.module.css
@@ -1,177 +1,313 @@
 @import url("./../../Constant.css");
 
-.containerCard {
-    width: 230px;
-    height: 397px;
-    display: flex;
-    flex-direction: column;
-    border-radius: 8px;
-    padding-bottom: 24px;
-    background-color: var(--primaryWhite);
-    overflow: hidden;
+@media screen and (min-width: 393px) {
+    .containerCard {
+        width: 178.5px;
+        height: 315px;
+        display: flex;
+        flex-direction: column;
+        border-radius: 8px;
+        padding-bottom: 24px;
+        background-color: var(--primaryWhite);
+        overflow: hidden;
+    }
+
+    .containerCard > div:first-child {
+        position: relative;
+        width: 178px;
+        height: 178px;
+    }
+    .containerCard > div:first-child > img {
+        width: 127.73px;
+        height: 115.53px;
+        margin: 32.09px 24.62px 31.38px 24.62px;
+    }
+
+    .containerCard > div:first-child > span {
+        width: 68px;
+        height: 20px;
+        display: flex;
+        flex-direction: row;
+        gap: 4px;
+        align-items: center;
+        justify-content: center;
+        position: absolute;
+        top: 12.55px;
+        right: 12.75px;
+    }
+    .containerCard > div:first-child > span > img {
+        width: 20px;
+        height: 20px;
+        border-radius: 4px;
+    }
+
+    .titleProducts {
+        width: 146.5px;
+        height: 51px;
+        margin: 0px auto;
+        font-size: 14px;
+        line-height: 24px;
+        text-align: justify;
+        text-wrap: nowrap;
+        color: var(--primaryGrayDark);
+        overflow: hidden;
+    }
+
+    .rating_and_seller_container {
+        width: 143.5px;
+        height: 22px;
+        margin: 12px auto;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .rating_and_seller_container > span:first-child {
+        display: none;
+    }
+    .rating_and_seller_container > span:first-child > p {
+        width: 19px;
+        font-size: 14px;
+        line-height: 14px;
+        text-align: right;
+        margin-top: 3px;
+    }
+    .rating_and_seller_container > span:first-child > img {
+        width: 12px;
+        height: 12px;
+    }
+
+    .rating_and_seller_container > span:last-child {
+        display: none;
+    }
+    .container_price_increase {
+        display: none;
+    }
+    .priceMobile {
+        display: flex;
+        width: 146.5px;
+        height: 50px;
+        margin: 0px auto;
+        flex-direction: column;
+        gap: 14px;
+    }
+    .priceMobile > span:first-child {
+        display: flex;
+        flex-direction: row-reverse;
+        align-items: center;
+        justify-content: space-between;
+    }
+    .priceMobile > span:first-child > p {
+        color: #b0b0b0;
+    }
+    .priceMobile > span:first-child > span {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        gap: 6px;
+    }
+
+    .priceMobile > span:last-child {
+        display: flex;
+        flex-direction: row-reverse;
+        align-items: center;
+        gap: 6px;
+    }
+    .priceMobile > span:last-child > p:last-child {
+        color: var(--primaryGreen);
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 14px;
+        text-align: right;
+    }
+    .priceMobile > span:last-child > p:first-child {
+        font-size: 10px;
+        font-weight: 400;
+        line-height: 14px;
+        text-align: right;
+        color: var(--primaryGray);
+    }
 }
 
-.containerCard > div:first-child {
-    position: relative;
-    width: 100%;
-    height: 230px;
-}
-.containerCard > div:first-child > img {
-    width: 165.05px;
-    height: 147.99px;
-    margin: 41.46px 31.81px 40.55px 31.81px;
-}
+@media screen and (min-width: 1000px) {
+    .priceMobile {
+        display: none;
+    }
+    .containerCard {
+        width: 230px;
+        height: 397px;
+        display: flex;
+        flex-direction: column;
+        border-radius: 8px;
+        padding-bottom: 24px;
+        background-color: var(--primaryWhite);
+        overflow: hidden;
+    }
 
-.containerCard > div:first-child > span {
-    width: 84px;
-    height: 24px;
-    display: flex;
-    flex-direction: row;
-    gap: 6px;
-    align-items: center;
-    justify-content: center;
-    position: absolute;
-    top: 11px;
-    right: 9px;
-}
-.containerCard > div:first-child > span > img {
-    width: 24px;
-    height: 24px;
-    border-radius: 4px;
-}
+    .containerCard > div:first-child {
+        position: relative;
+        width: 100%;
+        height: 230px;
+    }
+    .containerCard > div:first-child > img {
+        width: 165.05px;
+        height: 147.99px;
+        margin: 41.46px 31.81px 40.55px 31.81px;
+    }
 
-.titleProducts {
-    width: 198px;
-    height: 47px;
-    margin: 0px auto;
-    font-size: 13px;
-    line-height: 24px;
-    text-align: justify;
-    color: var(--primaryGrayDark);
-}
+    .containerCard > div:first-child > span {
+        width: 84px;
+        height: 24px;
+        display: flex;
+        flex-direction: row;
+        gap: 6px;
+        align-items: center;
+        justify-content: center;
+        position: absolute;
+        top: 11px;
+        right: 9px;
+    }
+    .containerCard > div:first-child > span > img {
+        width: 24px;
+        height: 24px;
+        border-radius: 4px;
+    }
 
-.rating_and_seller_container {
-    width: 198px;
-    height: 26px;
-    margin: 14px auto;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-}
+    .titleProducts {
+        width: 198px;
+        height: 47px;
+        margin: 0px auto;
+        font-size: 13px;
+        line-height: 24px;
+        text-align: justify;
+        color: var(--primaryGrayDark);
+    }
 
-.rating_and_seller_container > span:first-child {
-    width: 35px;
-    height: 12px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-}
-.rating_and_seller_container > span:first-child > p {
-    width: 19px;
-    font-size: 14px;
-    line-height: 14px;
-    text-align: right;
-    margin-top: 3px;
-}
-.rating_and_seller_container > span:first-child > img {
-    width: 12px;
-    height: 12px;
-}
+    .rating_and_seller_container {
+        width: 198px;
+        height: 26px;
+        margin: 14px auto;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+    }
 
-.rating_and_seller_container > span:last-child {
-    width: 83px;
-    height: 26px;
-    display: flex;
-    flex-direction: row-reverse;
-    align-items: center;
-    gap: 6px;
-    padding: 4px 8px 4px 10px;
-    color: var(--primaryGray);
-    font-size: 12px;
-    line-height: 14px;
-    text-align: right;
-}
+    .rating_and_seller_container > span:first-child {
+        width: 35px;
+        height: 12px;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+    }
+    .rating_and_seller_container > span:first-child > p {
+        width: 19px;
+        font-size: 14px;
+        line-height: 14px;
+        text-align: right;
+        margin-top: 3px;
+    }
+    .rating_and_seller_container > span:first-child > img {
+        width: 12px;
+        height: 12px;
+    }
 
-.container_price_increase {
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: space-between;
-    align-items: center;
-    width: 198px;
-    height: 36px;
-    margin: 0px auto;
-}
-.container_price_increase > span {
-    display: flex;
-    flex-direction: column;
-    align-items: end;
-    gap: 8px;
-    color: var(--primaryGrayPrice);
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 14px;
-    text-align: right;
-}
-.btn_plus {
-    background-color: var(--primaryWhite);
-    outline: none;
-    width: 35px;
-    height: 35px;
-    border: 1px solid var(--primaryGreen);
-    border-radius: 4px;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: all ease-in 150ms;
-}
-.container_price_increase > button > img {
-    width: 14px;
-    height: 14px;
-}
-.btn_plus:hover {
-    background-color: var(--primaryGreen);
-}
-.btn_plus:hover > svg path {
-    stroke: var(--primaryWhite);
-}
+    .rating_and_seller_container > span:last-child {
+        width: 83px;
+        height: 26px;
+        display: flex;
+        flex-direction: row-reverse;
+        align-items: center;
+        gap: 6px;
+        padding: 4px 8px 4px 10px;
+        color: var(--primaryGray);
+        font-size: 12px;
+        line-height: 14px;
+        text-align: right;
+    }
 
-.numberHandler {
-    width: 70px;
-    height: 35px;
-    background: var(--primaryWhite);
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    border: 1px solid var(--primaryGreen);
-    outline: none;
-    border-radius: 4px;
-    transition: all ease-in 150ms;
-    padding: 0px 4px;
-}
+    .container_price_increase {
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: space-between;
+        align-items: center;
+        width: 198px;
+        height: 36px;
+        margin: 0px auto;
+    }
+    .container_price_increase > span {
+        display: flex;
+        flex-direction: column;
+        align-items: end;
+        gap: 8px;
+        color: var(--primaryGrayPrice);
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 14px;
+        text-align: right;
+    }
+    .btn_plus {
+        background-color: var(--primaryWhite);
+        outline: none;
+        width: 35px;
+        height: 35px;
+        border: 1px solid var(--primaryGreen);
+        border-radius: 4px;
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        transition: all ease-in 150ms;
+    }
+    .container_price_increase > button > img {
+        width: 14px;
+        height: 14px;
+    }
+    .btn_plus:hover {
+        background-color: var(--primaryGreen);
+    }
+    .btn_plus:hover > svg path {
+        stroke: var(--primaryWhite);
+    }
 
-.numberHandler > p {
-    font-size: 14px;
-    line-height: 24px;
-    color: var(--primaryGreen);
-}
+    .numberHandler {
+        width: 70px;
+        height: 35px;
+        background: var(--primaryWhite);
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        border: 1px solid var(--primaryGreen);
+        outline: none;
+        border-radius: 4px;
+        transition: all ease-in 150ms;
+        padding: 0px 4px;
+    }
 
-.final_price {
-    display: flex;
-    flex-direction: row-reverse;
-    align-items: center;
-    gap: 6px;
-}
+    .numberHandler > p {
+        font-size: 14px;
+        line-height: 24px;
+        color: var(--primaryGreen);
+    }
 
-.final_price > p:first-child {
-    color: var(--primaryGray);
-    font-size: 10px;
-}
-.final_price > p:last-child {
-    color: var(--primaryGreen);
-    font-size: 18px;
-    font-weight: 500;
+    .final_price {
+        display: flex;
+        flex-direction: row-reverse;
+        align-items: center;
+        gap: 6px;
+    }
+
+    .final_price > p:first-child {
+        color: var(--primaryGray);
+        font-size: 10px;
+    }
+    .final_price > p:last-child {
+        color: var(--primaryGreen);
+        font-size: 18px;
+        font-weight: 500;
+    }
 }
