--- a/src/Components/Category/Category.module.css
+++ b/src/Components/Category/Category.module.css
@@ -1,112 +1,228 @@
 @import url("./../../Constant.css");
 
-.container {
-    width: 1294px;
-    height: 628px;
-    margin: 103px auto 73px auto;
-    background-color: var(--primaryGrayDarkBold);
-    border-radius: 20px;
-    position: relative;
-}
-.container > div:first-child {
-    display: flex;
-    width: 324px;
-    height: 442px;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    position: absolute;
-    top: 93px;
-    right: 56px;
-}
-.container > div:first-child > a:last-child {
-    width: 100%;
-    height: 56px;
-    background-color: var(--primaryGreen);
-    color: var(--primaryWhite);
-    border-radius: 12px;
-    display: flex;
-    flex-direction: row-reverse;
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 24px;
-    text-align: right;
+@media screen and (min-width: 393px) {
+    .container {
+        width: 363px;
+        height: 828px;
+        margin: 40px auto;
+        border-radius: 20px;
+        background-color: var(--primaryGrayDarkBold);
+        padding: 21px 18.5px;
+        position: relative;
+    }
+    .slider {
+        position: relative;
+    }
+    .slider > img {
+        width: 325px;
+        height: 338px;
+        border-radius: 16px;
+    }
+    .btn {
+        background-color: transparent;
+        border: none;
+        box-shadow: none;
+        outline: none;
+        position: absolute;
+        top: 320px;
+        right: 51px;
+        cursor: pointer;
+    }
+    .btn2 {
+        background-color: transparent;
+        border: none;
+        box-shadow: none;
+        outline: none;
+        position: absolute;
+        top: 320px;
+        left: 51px;
+
+        cursor: pointer;
+    }
+    .btn2 > svg > rect,
+    .btn > svg > rect {
+        transition: all ease-in 150ms;
+    }
+    .btn2:hover > svg > rect,
+    .btn:hover > svg > rect {
+        fill: var(--primaryGreen);
+    }
+    .container > div:first-child {
+        display: flex;
+        width: 276px;
+        height: 356px;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        position: absolute;
+        top: 429px;
+        right: 43px;
+    }
+    .container > div:first-child > a:last-child {
+        width: 276px;
+        height: 56px;
+        background-color: var(--primaryGreen);
+        color: var(--primaryWhite);
+        border-radius: 12px;
+        display: flex;
+        flex-direction: row-reverse;
+        align-items: center;
+        justify-content: center;
+        gap: 10px;
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 24px;
+        text-align: right;
+    }
+    .container > div:first-child > div {
+        width: 276px;
+        margin: 0px auto;
+        height: 276px;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+        gap: 15px;
+    }
+    .item {
+        width: 130px;
+        height: 130px;
+        border-radius: 12px;
+        padding-top: 6px;
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: center;
+        justify-content: center;
+        gap: 1px;
+        background-color: #e9eee0;
+        border: 1px solid #e9eee0;
+    }
+    .container > div:first-child > div > a > p {
+        color: var(--primaryGrayDarkBold);
+        width: 102px;
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 54px;
+        text-align: center;
+    }
 }
 
-.container > div:first-child > div {
-    width: 324px;
-    height: 324px;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    gap: 24px;
-}
+@media screen and (min-width: 1000px) {
+    .container {
+        width: 1294px;
+        height: 628px;
+        margin: 103px auto 73px auto;
+        background-color: var(--primaryGrayDarkBold);
+        border-radius: 20px;
+        position: relative;
+    }
+    .container > div:first-child {
+        display: flex;
+        width: 324px;
+        height: 442px;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        position: absolute;
+        top: 93px;
+        right: 56px;
+    }
+    .container > div:first-child > a:last-child {
+        width: 100%;
+        height: 56px;
+        background-color: var(--primaryGreen);
+        color: var(--primaryWhite);
+        border-radius: 12px;
+        display: flex;
+        flex-direction: row-reverse;
+        align-items: center;
+        justify-content: center;
+        gap: 10px;
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 24px;
+        text-align: right;
+    }
 
-.container > div:first-child > div > a > p {
-    color: var(--primaryGrayDarkBold);
-    width: 115px;
-    font-size: 18px;
-    font-weight: 500;
-    line-height: 54px;
-    text-align: center;
-}
+    .container > div:first-child > div {
+        width: 324px;
+        height: 324px;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+        gap: 24px;
+    }
 
-.item {
-    width: 150px;
-    height: 150px;
-    border-radius: 12px;
-    padding-top: 6px;
-    display: flex;
-    flex-direction: column-reverse;
-    align-items: center;
-    justify-content: center;
-    gap: 1px;
-    background-color: #e9eee0;
-    border: 1px solid #e9eee0;
-}
+    .container > div:first-child > div > a > p {
+        color: var(--primaryGrayDarkBold);
+        width: 115px;
+        font-size: 18px;
+        font-weight: 500;
+        line-height: 54px;
+        text-align: center;
+    }
 
-.slider {
-    width: 786px;
-    height: 524px;
-    border-radius: 16px;
-    position: absolute;
-    top: 52px;
-    bottom: 52px;
-    left: 49px;
-    right: 459px;
-    position: relative;
-}
+    .item {
+        width: 150px;
+        height: 150px;
+        border-radius: 12px;
+        padding-top: 6px;
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: center;
+        justify-content: center;
+        gap: 1px;
+        background-color: #e9eee0;
+        border: 1px solid #e9eee0;
+    }
 
-.btn {
-    background-color: transparent;
-    border: none;
-    box-shadow: none;
-    outline: none;
-    position: absolute;
-    top: 244.1px;
-    left: 767.58px;
-    cursor: pointer;
-}
-.btn2 {
-    background-color: transparent;
-    border: none;
-    box-shadow: none;
-    outline: none;
-    position: absolute;
-    top: 244.1px;
-    right: 767.58px;
-    cursor: pointer;
-}
+    .slider {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 786px;
+        height: 524px;
+        border-radius: 16px;
+        position: absolute;
+        top: 52px;
+        bottom: 52px;
+        left: 49px;
+        right: 459px;
+        position: relative;
+    }
+    .slider > img {
+        width: 100%;
+        height: 100%;
+    }
 
-.btn2 > svg > rect,
-.btn > svg > rect {
-    transition: all ease-in 150ms;
-}
-.btn2:hover > svg > rect,
-.btn:hover > svg > rect {
-    fill: var(--primaryGreen);
+    .btn {
+        background-color: transparent;
+        border: none;
+        box-shadow: none;
+        outline: none;
+        position: absolute;
+        top: 244.1px;
+        right: -20px;
+        cursor: pointer;
+    }
+    .btn2 {
+        background-color: transparent;
+        border: none;
+        box-shadow: none;
+        outline: none;
+        position: absolute;
+        top: 244.1px;
+        right: 766.42px;
+        cursor: pointer;
+    }
+
+    .btn2 > svg > rect,
+    .btn > svg > rect {
+        transition: all ease-in 150ms;
+    }
+    .btn2:hover > svg > rect,
+    .btn:hover > svg > rect {
+        fill: var(--primaryGreen);
+    }
 }
