--- a/src/Components/FilterBox/FilterBox.module.css
+++ b/src/Components/FilterBox/FilterBox.module.css
@@ -1,30 +1,68 @@
 @import url("./../../Constant.css");
 
-.container_btn {
-    width: 474px;
-    height: 64px;
-    border-radius: 12px;
-    border: 1px solid #c6cbb6;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    gap: 48px;
+@media screen and (min-width: 393px) {
+    .container_btn {
+        width: 356px;
+        height: 64px;
+        margin: 32px auto 14px auto;
+        border-radius: 12px;
+        border: 1px solid #c6cbb6;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        padding: 8px;
+    }
+    .container_btn > button {
+        font-family: "IRANSans_FaNum";
+        color: var(--primaryGrayMedium);
+        font-size: 16px;
+        line-height: 24px;
+        font-weight: 400;
+        text-align: right;
+        border: none;
+        border-radius: 8px;
+        cursor: pointer;
+        width: 112px;
+        height: 48px;
+        padding: 12px 16px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .btn_active {
+        background-color: var(--primaryGrayLightBackGroundBtn);
+    }
 }
 
-.container_btn > button {
-    font-family: "IRANSans_FaNum";
-    color: var(--primaryGrayMedium);
-    font-size: 16px;
-    line-height: 24px;
-    font-weight: 400;
-    text-align: right;
-    border: none;
-    padding: 12px 16px;
-    border-radius: 8px;
-    cursor: pointer;
-}
+@media screen and (min-width: 1000px) {
+    .container_btn {
+        margin: 0px;
+        width: 474px;
+        height: 64px;
+        border-radius: 12px;
+        border: 1px solid #c6cbb6;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        gap: 48px;
+    }
 
-.btn_active {
-    background-color: var(--primaryGrayLightBackGroundBtn);
+    .container_btn > button {
+        font-family: "IRANSans_FaNum";
+        color: var(--primaryGrayMedium);
+        font-size: 16px;
+        line-height: 24px;
+        font-weight: 400;
+        text-align: right;
+        border: none;
+        padding: 12px 16px;
+        border-radius: 8px;
+        cursor: pointer;
+    }
+
+    .btn_active {
+        background-color: var(--primaryGrayLightBackGroundBtn);
+    }
 }
