--- a/src/LayOut/Header.module.css
+++ b/src/LayOut/Header.module.css
@@ -11,22 +11,56 @@
         max-width: 393px;
         height: 66px;
         margin: 0px auto;
+        background-color: var(--primaryWhite);
     }
     .headerMobile > span {
         display: flex;
         width: 96px;
         height: 48px;
         margin-right: 8px;
+        cursor: pointer;
     }
-    .headerMobile > img {
+    .headerMobile > a > img {
         width: 96px;
         height: 45.78px;
         margin-left: 14px;
     }
+    .menuBar > ul {
+        display: flex;
+        flex-direction: column;
+        background-color: var(--primaryWhite);
+        width: 393px;
+        height: 254px;
+        border-radius: 0px 0px 16px 16px;
+        gap: 16px;
+        padding: 24px 16px;
+        position: absolute;
+        top: 68px;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+    .menuBar > ul > li > a > p {
+        color: var(--primaryGrayMedium);
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 21.91px;
+        text-align: right;
+    }
+    .menuBar > ul > li:last-child > a {
+        display: flex;
+        flex-direction: row-reverse;
+        gap: 10px;
+        text-align: center;
+        justify-content: start;
+    }
+    .menuBar > ul > li:last-child > a > p {
+        font-weight: 700;
+    }
 }
 
 @media screen and (min-width: 1000px) {
-    .headerMobile {
+    .headerMobile,
+    .menuBar {
         display: none;
     }
     .headerPC {
